# evolia

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/: system_tools.json
docs/: API_Reference.md  Developer_Guide.md  User_Guide.md
src/: README.md
src/evolia/: __init__.py  __main__.py
src/evolia/config/: config.yaml  default.yaml
src/evolia/core/: candidate_manager.py  code_fixer.py  code_generator.py  evolia.py  executor2.py  function_generator.py  interface_verification.py  library_management.py  promotion.py  prompts.py  restricted_execution.py
src/evolia/integrations/: openai_structured.py
src/evolia/models/: __init__.py  models.py  schemas.py
src/evolia/network/: network_logging.py  network_rate_limiter.py
src/evolia/security/: file_access.py  security.py
src/evolia/utils/: exceptions.py  logger.py  network_logging.py
src/evolia/validation/: __init__.py  code_validation.py  plan_validation.py
test_data/: system_tools.json  test_tool.py
tests/: README.md  conftest.py  requirements-test.txt  test_code_generation.py
tests/integration/: test_code_generation.py  test_code_generator.py  test_executor2.py  test_integration.py  test_network.py  test_output_handling.py  test_restricted_execution.py
tests/unit/: test_code_fixer.py  test_code_generator.py  test_evolia.py  test_exceptions.py  test_executor2.py  test_executor_legacy.py  test_function_generator.py  test_function_interfaces.py  test_interface_verification.py  test_library_management.py  test_logger.py  test_minimal.py  test_models.py  test_restricted_execution.py  test_security.py  test_tool_metadata.py
tests/validation/: test_code_validation.py  test_plan_interface_validation.py  test_validation.py
tools/system/: csv_cleaner.py  example_tool.py
(+34 files in other folders)
